# Homework-2-python-OOP

./: .gitignore  README.md  pyproject.toml
src/: abs_base_product.py  category.py  create_products_and_categories_from_json.py  iterator_products.py  lawn_grass.py  mixin_print_init_info.py  product.py  smartphone.py
tests/: conftest.py  test_class_category.py  test_class_lawngrass.py  test_class_product.py  test_class_smartphone.py  test_mixin_print_init_info.py  test_modul_create_class_from_json.py
