[tool.poetry]
name = "homework-2-python-oop"
version = "0.1.0"
description = ""
authors = ["Maksim Lakovich <maks.lakovich@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"


[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "import",
    "from",
    "@abstractmethod"
]


[tool.poetry.group.lint.dependencies]
isort = "^5.13.2"
black = "^24.10.0"
flake8 = "^7.1.1"
mypy = "^1.11.2"


[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'

[tool.black]
line-length = 119
exclude = ".git"

[tool.isort]
line_length = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
